--- a/JS Seminar/eBayaniApp.html
+++ b/JS Seminar/eBayaniApp.html
@@ -12,7 +12,7 @@
 
   <nav>
     <ul>
-      <li><a href="myPortfolio.html">← Back to Portfolio</a></li>
+      <li><a href="index.html">← Back to Portfolio</a></li>
     </ul>
   </nav>
 
